# short-unique-id

./: .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  setup.py  short_id.py  snowflake.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
short_id/: __init__.py  short_id.py
short_unique_id/: short_id.py  snowflake.py
tests/: __init__.py  test_short_id.py  test_snowflake.py
